
5.1.0 -> 5.2a0:
    - jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
    - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c
    - jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
	(Alexey Tourbin<at@altlinux.ru>).
    - jbj: fix: Install-Size: spewage in Kb, not bytes. everone gotta be different.
    - jbj: permit *.deb syntax as arbitrary tags.
    - jbj: add *.deb format dependency tag header extensions.
    - jbj: fix: return 1 rather than assertion failing on Suggests: header ext
	query of package with no Requires:.
    - rse: unbreak building without LZMAUtils library
    - jbj: add --deb:foo aliases for *.deb spewage.
    - jbj: rework :strsub find-and-replace to use mire patterns.
    - jbj: mire: add REG_NEWLINE to default regex compilation.
    - jbj: add :strsub format extension find-and-replace using posix RE's.
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: lzdio: start using -llzma instead.
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - rse: upgrade the embedded lrexlib Lua library from version 2.2.0 to 2.3.0
    - rse: apply upstream vendor patches from 2008-05-08 for Lua 5.1.3
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.