@@ -1,3 +1,22 @@
+md2:21a2b68fbe8786ea411a4eefe7ed5c23  ref/cAos.i386.manifest
+md4:761879ae93e23edcd8f1f1bcf3fcf7c1  ref/cAos.i386.manifest
+md5:2886c58f2b6e2404740c23f63c52b357  ref/cAos.i386.manifest
+sha1:0b9f25683af2c7023a73888b71cc44fb7b154eac  ref/cAos.i386.manifest
+sha224:3fb101871ccdee8403680c71393ebf8330ce18316a02c02fde4639c3  ref/cAos.i386.manifest
+sha256:ceca4628ebc66c6ee740447525605164e1abf0146125ac8d5953b38d9da07ecb  ref/cAos.i386.manifest
+sha384:c756cbde938b7ec08b028a6e3824782ac3d3c3388a4539033dfedf50d8a5449c80852bee3691c601799ec8b3ae8d6c73  ref/cAos.i386.manifest
+sha512:e9fa57ce60f2e30c7984d70383ddccfe931cc2618fba902e92eb22bb96b1e3cfb30ba899299b147d51ac9d0f475752773f2ed33c3adbad9104109e382932b68f  ref/cAos.i386.manifest
+salsa10:f1f74251cc8dc539967a06dd64e97cd2a5e2b917078fc5d8898ce5cc8885c403a51925a01fb84b44e2a96014a448bded9839779b81e1d8f4dc8bb91a941b7ff6  ref/cAos.i386.manifest
+salsa20:eac948b68b1d92f75f4113d9f51ea840aec92f7a34613a05a72b84c106e8dad42581807bfe7f1a558e5ada22ab6c1d2a779610a82f6786b11e41adbcc3d2752f  ref/cAos.i386.manifest
+rmd128:7720a9581e604ecdc183b841a288d43e  ref/cAos.i386.manifest
+rmd160:ecd23ce9498770048e242a4a0bb4fafed5156fb0  ref/cAos.i386.manifest
+rmd256:91d827dae0f3eb5a560b24ed0bcf40c44a07396ad815ec7ad6392ceab5efcd0c  ref/cAos.i386.manifest
+rmd320:cbe59ee3c387598bd5a82dc44d0c523d7a5cf63c11f82e512b91508eb88f90fc3bd39cc2755740a6  ref/cAos.i386.manifest
+tiger:09dffd63a02f84dce7074293792cd94be06614012fce0e8b  ref/cAos.i386.manifest
+crc32:9b6e643f  ref/cAos.i386.manifest
+crc64:d41fd29fb877af9f  ref/cAos.i386.manifest
+adler32:9e965bd9  ref/cAos.i386.manifest
+jlu32:505c9aac  ref/cAos.i386.manifest
 md2:09b74330e7dbaca60826d0c43422b818  ref/edos.qa.1
 md4:cc95d7410fe89a2c60904cb19175c520  ref/edos.qa.1
 md5:4952a933832a8f7b88f8ec0993228bb7  ref/edos.qa.1
@@ -264,25 +283,25 @@ crc32:46e1e645  ref/repomd.xml
 crc64:78d006d5ebc0570c  ref/repomd.xml
 adler32:9e112467  ref/repomd.xml
 jlu32:6f662ac3  ref/repomd.xml
-md2:82566caabc34c6722bcda8867f519fda  ref/showrc
-md4:71327919432559b9a11628758db6c67a  ref/showrc
-md5:c080178d8fabdaf1b73a9b39066cda59  ref/showrc
-sha1:479b974bbfc7059f288e61fea8fe5e8499f1ce00  ref/showrc
-sha224:96adb7d2b5e6a09fbd86491dc81ee9f02fdd10593d87e029d2847e61  ref/showrc
-sha256:ca33421102b11a620bc05cd4cf44b528495fb4c9833f359afdf1081677db8a17  ref/showrc
-sha384:cc126bb9744f051ae489233fd2d35e48c9bf5f3727c97b99e03291096f513ce6a21a89dec4dff56149134864e4065462  ref/showrc
-sha512:d3dc4ed40e0ae60f420a3891d2b376adb8ed74a5e7f2ac708270a11cf401314ae7363deae85f423e13ec2cb66fce6562fbc8bf9e6fec063efc266223515cc42a  ref/showrc
-salsa10:e096e9395b58b3bab379aad5901ecd80a30fc26c7e5d04327fa5d62057b114e50b1de7642fd7ea06e4835e2957ed01eeb7205d23bafbb4add4a8a59b925acf78  ref/showrc
-salsa20:cb649533476712151056cffdd32e4aae7f940e36482c75d1222446b66f652a6c720a2e8d3f1689dcec51d72894e44d3c365b06df8bd99f511fe2b818c7d7855f  ref/showrc
-rmd128:f2b552a941ef1283cb92ad976f3897a8  ref/showrc
-rmd160:fc6a3c31d5d7207e824308e059494691f2f939e5  ref/showrc
-rmd256:9257076f03c8b4a0b0c4937df6374c2b289a32f17871dd25e5323367038d5e07  ref/showrc
-rmd320:127b989723c7430607efe8bbbcf0b2cc3562b4f01bfb19d8ff2e811b1cce0354960be8053ff976f8  ref/showrc
-tiger:f7ee855bae407b91bba6b4f1e436718857ab1dc64b987a04  ref/showrc
-crc32:996a0fc3  ref/showrc
-crc64:f0728d10f95e054c  ref/showrc
-adler32:a48c19bf  ref/showrc
-jlu32:e36e8fb5  ref/showrc
+md2:ea78b2651b579bb803873a22566a95ec  ref/showrc
+md4:b63262ad9279b36757716a55349325f4  ref/showrc
+md5:797208dd7338b530dc26c06b91a58947  ref/showrc
+sha1:df5abe194255d82b89a61bfd86096a91bff89349  ref/showrc
+sha224:16e0b25e34375b0d77d4202f68d2ff3a4b6122d7884662f88771fd57  ref/showrc
+sha256:31d211dbab3f3b636de9a6e69eaf93653681a600e92ef9008c6ec66a694bc4a4  ref/showrc
+sha384:2b8665d7cd99f5c013f874beac2aa7874124701e0421ea910c355564f1e8630238123ef263795d8e5e846b50b595fa21  ref/showrc
+sha512:e383f65e5383e4522d9e1a5920eb4f1b04a682b55cc2836f58a254282945a068770c73808a0aaaa7b281e4c9dd045b75f9243d6a8b0beda7aacb50e9baea6ce7  ref/showrc
+salsa10:d9d498d7965a5721e5e89a37ec69b40d5caae6422e778078afe6a9de7fc876bd2a3190589f7aefdf412f06367c58f76f9223ea6ab4b2f4a7988f68a0d924b990  ref/showrc
+salsa20:4fb70b064306d444b28ada6582d46eba25d1bb26c4fd7ed5277e6d5449489c3187f86fe65028e16621eeb20884004f3149910f2c58dc1128ae9c525621920208  ref/showrc
+rmd128:e07c57b06ebaef74e3dfa5c7cffa0e58  ref/showrc
+rmd160:a2fa639403b0f95c4687a05b970b587b5d35a603  ref/showrc
+rmd256:67aa4005d9a5aeeb2d2951760aeffd5b7f72c063fa7b00b2b1431b2bf6bbbf32  ref/showrc
+rmd320:b217df922f3d3e36cba3a9cba8866a236c21206086c2a821c673f871a3cc2592c57c0796a8d7395f  ref/showrc
+tiger:b3cfb91cf77cad2c195d04b095ca33834300fb9cb78793d4  ref/showrc
+crc32:8ff59481  ref/showrc
+crc64:df7ecabb1cf9e176  ref/showrc
+adler32:add249f8  ref/showrc
+jlu32:ce2973e1  ref/showrc
 md2:702d78dbf9033f52c9263253e626c5be  ref/version
 md4:75e0e6207421a7c860d7cd4c8e19695f  ref/version
 md5:063c879105b7acac5340b506fe5df7ec  ref/version
