@@ -14,3 +14,5 @@ edos-test/wheel-3-0.noarch.rpm
 edos-test/window-0-0.noarch.rpm
 edos-test/window-1-0.noarch.rpm
 edos-test/window-2-0.noarch.rpm
+probes-test/probes-1-0.noarch.rpm
+probes-test/probes-2-0.noarch.rpm
