@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<otherdata xmlns="http://linux.duke.edu/metadata/other" packages="4">
+<otherdata xmlns="http://linux.duke.edu/metadata/other" packages="5">
 <package pkgid="f4b34bce38c077a682f6a10e91bac4ac8dd6d905" name="devtool-sanity" arch="noarch">
   <version epoch="0" ver="1.0" rel="1"/>
   <changelog author="Jeff Johnson &lt;jbj@rpm5.org&gt; - 1.0-1" date="1212789600">- add some additional content</changelog>
@@ -19,5 +19,8 @@
   <changelog author="Jeff Johnson &lt;jbj@rpm5.org&gt;" date="1197410400">- release popt-1.13 through rpm5.org.</changelog>
   <changelog author="Jeff Johnson &lt;jbj@rpm5.org&gt;" date="1184104800">- release popt-1.12 through rpm5.org.</changelog>
   <changelog author="Jeff Johnson &lt;jbj@rpm5.org&gt;" date="1181426400">- release popt-1.11 through rpm5.org.</changelog>
+</package>
+<package pkgid="b2e1fd2756b27bcf888c990c02be7912074cd096" name="probes-test" arch="noarch">
+  <version epoch="0" ver="1" rel="0"/>
 </package>
 </otherdata>
