@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<metadata xmlns="http://linux.duke.edu/metadata/common" xmlns:rpm="http://linux.duke.edu/metadata/rpm" packages="4">
+<metadata xmlns="http://linux.duke.edu/metadata/common" xmlns:rpm="http://linux.duke.edu/metadata/rpm" packages="5">
 <package type="rpm">
   <name>devtool-sanity</name>
   <arch>noarch</arch>
@@ -132,6 +132,54 @@ shell-like rules.</description>
     </rpm:provides>
     <rpm:requires>
       <rpm:entry name="gettext"/>
+    </rpm:requires>
+    <rpm:conflicts>
+    </rpm:conflicts>
+    <rpm:obsoletes>
+    </rpm:obsoletes>
+  </format>
+</package>
+<package type="rpm">
+  <name>probes-test</name>
+  <arch>noarch</arch>
+  <version epoch="0" ver="1" rel="0"/>
+  <checksum type="sha" pkgid="YES">b2e1fd2756b27bcf888c990c02be7912074cd096</checksum>
+  <summary>RPM dependency probes test</summary>
+  <description>This is the parent package.</description>
+  <packager></packager>
+  <url></url>
+  <time file="1213640390" build="1213640344"/>
+  <size package="11746" installed="11746" archive="9084"/>
+  <location xml:base="(none)" href="probes-test-1-0.src.rpm"/>
+  <format>
+    <rpm:license>Any</rpm:license>
+    <rpm:vendor/>
+    <rpm:group>Any</rpm:group>
+    <rpm:buildhost>wellfleet.jbj.org</rpm:buildhost>
+    <rpm:header-range start="368" end="7776"/>
+    <rpm:provides>
+    </rpm:provides>
+    <rpm:requires>
+      <rpm:entry name="gnupg(/X/probes-test/test1.asc)" flags="EQ" epoch="0" ver="4E23E878D41A0A88EDFCFA5A6E744ACBA9C09E30"/>
+      <rpm:entry name="signature(/X/probes-test/test1.asc)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key1.pgp:4E23E878D41A0A88EDFCFA5A6E744ACBA9C09E30"/>
+      <rpm:entry name="signature(/X/probes-test/test1.txt:/X/probes-test/test1.sig)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key1.pgp:4E23E878D41A0A88EDFCFA5A6E744ACBA9C09E30"/>
+      <rpm:entry name="gnupg(/X/probes-test/test2.asc)" flags="EQ" epoch="0" ver="7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="signature(/X/probes-test/test2.asc)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key2.pgp:7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="signature(/X/probes-test/test2.txt:/X/probes-test/test2.sig)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key2.pgp:7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="gnupg(/X/probes-test/test3.asc)" flags="EQ" epoch="0" ver="7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="signature(/X/probes-test/test3.asc)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key2.pgp:7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="signature(/X/probes-test/test3.txt:/X/probes-test/test3.sig)" flags="EQ" epoch="0" ver="/X/probes" rel="test/key2.pgp:7D121A8FC05DC18A4329E9EF67042EC961B7AE34"/>
+      <rpm:entry name="user(root)"/>
+      <rpm:entry name="!user(ToOr)"/>
+      <rpm:entry name="group(root)"/>
+      <rpm:entry name="!group(ToOr)"/>
+      <rpm:entry name="mounted(/)"/>
+      <rpm:entry name="!mounted(/PaCkAgEs)"/>
+      <rpm:entry name="diskspace(/tmp)" flags="GT" epoch="0" ver="1"/>
+      <rpm:entry name="diskspace(/tmp)" flags="GE" epoch="0" ver="1Kb"/>
+      <rpm:entry name="!diskspace(/tmp)" flags="LT" epoch="0" ver="1Mb"/>
+      <rpm:entry name="executable(/bin/sh)"/>
+      <rpm:entry name="executable(cat)"/>
     </rpm:requires>
     <rpm:conflicts>
     </rpm:conflicts>
